<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_edit">Edit</string>
    <string name="action_send">Send</string>
    <string name="action_send_multiple">Send Multiple</string>
    <string name="action_view">View</string>
    <string name="add_after">后方新增</string>
    <string name="add_cancel">取消添加</string>
    <string name="add_event">增加事件</string>
    <string name="add_id_first">请确保控件有id属性</string>
    <string name="add_in">内部新增</string>
    <string name="add_type_android_layout">Android布局</string>
    <string name="add_type_android_widget">Android控件</string>
    <string name="add_type_autojs_layout">布局</string>
    <string name="add_type_autojs_widget">控件</string>
    <string name="add_type_collect">收藏</string>
    <string name="add_widget_success">新增控件成功</string>
    <string name="agc_0692DAD5D21427E7CCE627E8DC1ED71FDB307EBDC4DFB3A554BC60FCCE38E034">009A97651ECF698419C21FFB220332C64F0EFFEAC58CFBA6CB9E8267E1335EAF611A4A05B2632E905518D5418053E81893C45D590632F3E58FEE339E152B28D01C</string>
    <string name="agc_109B7B0344C0EDE50A1F3332C0015C78281E801719F522B4F20FDF815A5BCC3F">00971A14ECFB698DDC62A0496E23A0CC501E2DAD61C22048EE4F3852B20E8E2EC9C0A7BA96EFB93BC38A2A4A71C3233D8E7377B7E23A515F886AFEEC1967962BEBAE8FFC355EEC119FDA37544E0C00A29A38CEB0FDCA7C4DDE388F23B54CE3889A</string>
    <string name="agc_1DAF2070F644F3B6CEA88178D5DA98CE4A7A380B545F415B1A228519B1E134C8">00FF3B9893BC3EF4B68D3C59E0D03BDC496FCEE3E1402432FAB24406C22F25DC0E06D04AC82CA7930753417206543BB4D1</string>
    <string name="agc_1F79ACBA9BD8A7666759524C3052C88689CBB5873811854517CBBE65DC268EAA">A058828C719591ED643D87B7A51418A8</string>
    <string name="agc_2CF9BE2236D08368B0649449A8546AA52B2038D467F630312C146F9EA821AC2E">00C69163626B92751CEAC64C6B4A64DA3B01AF68B538F1B5E3DFDE8E8014699075</string>
    <string name="agc_3C5E7223FA10AEB1FFA081C86F85F3C23A0526877FBC6A3A77C4D36A7BA9AAB3">00C964841F948420FE56162F87E33C57A8F48A2417ACB6683F6035F5EB8B0FDD964B53E5A6D15A61844B32EF38C3C836C5</string>
    <string name="agc_42CFA4FE0F87541B3B3F9793F5D829BE381703BB99853CCC25D018996F251536">003AF6A7E9831AEA2DF792AC1B825C1B3A3B23FC86A167115F753985398C2C45A0</string>
    <string name="agc_432BA784B7D2E3A6C73AB69659D3300DC6258E318543A10B50EA4B770C67DAB3">005796C3D2E4AA7320F1937931F9C27CE50D9CC9734882E3F72E33283762E79F67125C8B72397937F50AE525C508E2552249968F72B749C9920AB4BA7D99BB4195</string>
    <string name="agc_4E59F3D37D339A997CACA4A0C457DAA94A1F044555D950F1F9835B0B6F600D38">004D07B37A2519977F661EE00B6A3BA3DBFF222266DCB51654279BD352617E5CBF</string>
    <string name="agc_52C6C717F2BEA9936D7DEDC27E412B9E7AC9A6642A6D0AEE353B2B14737100F5">005E49D7BD649F210F7EEAEA3B1FF51DB002282675963C1E7CE480328F08742CEB7F6A7EE67FCA70AB2D62140335F3AB73</string>
    <string name="agc_55A14C88686718883C90D427958F540EC05210E430ED915D772D8F34C350D08B">00E3A46731090606D219F59451C6DB073EFF076D58516875CD1F36FA6D755AB8347D5D3FBA4EB1AC39EEE7D4DD997B3BDF03A4D694C06B4220EAD031E6AA35F11E</string>
    <string name="agc_56BB9FCDF7DAFDC12F18BE8BF765769B14E090D615353A1FF24238CC17EF2F2F">000DF11C6E7544A438902BCB5AEB3C5821321F1D7042C793E2DF936AAF41984BB8C52A1252C1D776B6F29EF7B2F9B8415EA21C70A7053BD4A738DB3CD229CAB02E</string>
    <string name="agc_5B5AF298A58B98DB86A04DB0E3B1924F7EAC7A14CA781F042E5F999BD413CC9E">00E87ED02EC144CA0A4EE76BF20791ACEEFE598B30253C72536681A73412902AA911704FDD596E6A5F567D2CED4C2EFFCE</string>
    <string name="agc_63F3255D837430EC4C799B2B5A8091A554A101C6FAC114907463E723AF33B544">003726361C247BD928476A292ED86E6CBF57EF40EB5972C761B21494B446B381EA3BB22D264E264DD944BDA33B31149FE57264996B848A2CE17346DAD42061EE3177D3E0C8FEB118C337AF6A70AF8A7CCA7CB89449A53C7553B50FA00A6AA82B0316997AD587F451946ED445851BC6FFC3548F3388EF69F9177420647F2B0C603CD879452C3EE0F2AF7BD66EBC039CE864A46FDFD195E9A2F5708DAEC82699823BCA73ADDC67C3AAC44C649DF9929A9B6C1FE66369396B499DA190C165CAE5BB6D4902CF07F7AB262369FF42A782F8423611E97554C21DFF4F63256FC5CB051ED2</string>
    <string name="agc_66412D70318648FA3BDD00A3CB2E73EE439F788EBA8010232B3B145A1ADE18F4">004A1E7FF19A04E109E0DF7FD599CB38E024BABDC7106A09AC283AD2FB0AD6C1A466DB945CF155780DBC7507C7A49D8B72</string>
    <string name="agc_69589FA8E5257AA8E3C477503B5586F4B4981C77F69B612318E3FC7AF1B00890">003115B8FA7CEA1F62C3607ADCEE065621A5F52E0CC32B706CA155A1E7E1B4DCB6A629F8A5FAF88E03D8807D372547C06C</string>
    <string name="agc_6D239E4C2FF1354F6DBB62ED715B0B2A4058A2C1B368EB9F5FAF8B457ED28FA6">0079654854578249A4C1145D279A3EC3F93A989B6E43A8F0EA3FC521B9069E179FAC92A58BE780999804C09A52A09AC8233E0C045A3FC90037EE5F6A1BAB0A1233</string>
    <string name="agc_6DC2F1E7B3508CE97B8A34B184EAD19FADAAC83160422DE0BA2F78B0438C6A98">0042CC7EE16728202310D4FB778D0674B28C1881107A9A83D0731C5116BCD5F55CFFAAA64C1AAA923297C21E68920B2B41</string>
    <string name="agc_7AE336DAB422A03E8E8A5A88C60ACA96939FAAC47AFC07F2870F0CAD9FB9C952">00128CC15E1C24B3470E71FC5AEE8BC12D8EB3535BCEE3FB67E1CF4B0D952D722A12ECEB49DCCF951D41464E2BDC27B0D52FC06CBFE21D38B7B6251A5F497EE3B1</string>
    <string name="agc_82EF8D63B2BE36159522C21C4D086D73D713FEEEE73A9F1FAF569DFCE12A4EAD">00AC28E482EEED31A9EDB7CCE31FB2BF9BDC54C63DFB3862F7FCE43D2223E62EC4A2B59A71546CEC732082261F29FB965765B0182F4516260F8F335F2614335D57</string>
    <string name="agc_840FE2348B9312C51373EFB2E2F030D10C43688DDE98467C8DD63AC7DC1855AB">004096FD4F92E7325A7E17451B13FE6554A9D49A4F3B7EAB460650230CDA2C06DD</string>
    <string name="agc_864E57EAF6D5DB70BE861700AFF6C17A93A9D202732BCB4048B0CDBB6EBF578F">00CC20165AC1AB97E0DEF1E788279998D7621B0D7619980DF84357AD57FD24C1DF12C9510E7EBF803C0F028D4F2AC40DAD3C628A4E783DD6448A9FC91506B9DC76</string>
    <string name="agc_8CBEB54DD45F5D2D07C517A93D2C07AC37E088876F07FDDF2D74CEFF5500AE68">00C852A9642CF0D591AF5670D1FD44047D9ACBA0CAB1C00B1014098F6B61F05D9AC51B80CA129F7C5A245D38FCA4903B95</string>
    <string name="agc_943F28EFD067BBA193A2BABED8B2DCC2AB346B483A7A7FFE4EEF97B6A6E8E95B">00044EF9DAA4F233A22714238B5B37426D48AB5FC80291BFBB2FAFE003DBE2625F0869484C970B4EE8FD688678FDE8784E</string>
    <string name="agc_A957AA80726AF0C438189B1E3703E5FF6FE072D7AEA1E90C98FC5AD863C11F19">003601D110A5537417C1931E895D798617FA7DBB668982659C1E2E011A06C6C05497D449B0B9CDCF08EF07C0F27CB2772AAE819E3724F719A239D68D0D0A47C616</string>
    <string name="agc_B1D468BFE76734080F76B2B7AFCD4E74561AE0CB6D3E48BC35857EFB95EA0BA0">00873E32948E8E7BD2CD3D0B07FE87213B9467AD75665695AE660B1926E1BE6A530430DAC1A3BF10884C2F24E965A94FC6</string>
    <string name="app_name">AutoJs五云Ai</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attr_change">增改属性</string>
    <string name="attr_clear">清空属性</string>
    <string name="bind_sdcard">绑定储存</string>
    <string name="bind_var">绑定变量</string>
    <string name="cancel_move">取消操作</string>
    <string name="change_page">切换视图</string>
    <string name="collect_widget">收藏控件</string>
    <string name="copy_after">复制至后方</string>
    <string name="copy_in">复制至内部</string>
    <string name="delete_all">整体删除</string>
    <string name="delete_one">单体删除</string>
    <string name="fresh">刷新</string>
    <string name="move_after">移动至后方</string>
    <string name="move_in">移动至内部</string>
    <string name="operate_all">整体操作</string>
    <string name="text_build_project_apk">Build Project</string>
    <string name="text_clear">Clear</string>
    <string name="text_cli">Terminal</string>
    <string name="text_code_beautify">Format code</string>
    <string name="text_copy">Copy</string>
    <string name="text_copy_all">Copy all</string>
    <string name="text_copy_dir_to_new_dir">Copy the old directory to the new one</string>
    <string name="text_copy_line">Copy line</string>
    <string name="text_create">Create</string>
    <string name="text_create_signature">Create Signature</string>
    <string name="text_debug_abbr">Dbg</string>
    <string name="text_delete">Delete</string>
    <string name="text_delete_line">Delete row</string>
    <string name="text_directory">Directory</string>
    <string name="text_edit">Edit</string>
    <string name="text_edit_project">Configure Project</string>
    <string name="text_file">File</string>
    <string name="text_find_or_replace">Find/Replace</string>
    <string name="text_fold">Fold</string>
    <string name="text_fold_all">Fold all</string>
    <string name="text_jump">Navigate</string>
    <string name="text_jump_to_end">Go to file end</string>
    <string name="text_jump_to_line">Go to line</string>
    <string name="text_jump_to_line_end">Go to the line end</string>
    <string name="text_jump_to_line_start">Go to line start</string>
    <string name="text_jump_to_start">Go to file start</string>
    <string name="text_log">Log</string>
    <string name="text_manage_signature">Manage Signature</string>
    <string name="text_move">Move</string>
    <string name="text_move_dir_to_new_dir">Move the old directory to the new one</string>
    <string name="text_move_lines_down">Move lines down</string>
    <string name="text_move_lines_up">Move lines up</string>
    <string name="text_no_op">No operations</string>
    <string name="text_npm_others">Other package managers</string>
    <string name="text_npm_search_plutojs">Search npm for autojs</string>
    <string name="text_open_workspace">Open workspace</string>
    <string name="text_others">More</string>
    <string name="text_preview">Preview</string>
    <string name="text_project">Project</string>
    <string name="text_redo">Redo</string>
    <string name="text_rename">Rename</string>
    <string name="text_run">Run</string>
    <string name="text_run_project">Run Project</string>
    <string name="text_save">Save</string>
    <string name="text_script_dir">Script directory path</string>
    <string name="text_send">Send</string>
    <string name="text_size_max_value">56</string>
    <string name="text_size_min_value">8</string>
    <string name="text_terminal">Term</string>
    <string name="text_undo">Undo</string>
    <string name="text_unfold_all">Unfold all</string>
    <string name="uncheck">取消勾选</string>
</resources>