<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <org.autojs.autojs.ui.widget.ToolbarMenuItem android:id="@id/file" android:layout_width="32.0dp" android:layout_height="match_parent" android:layout_marginStart="8.0dp" app:icon="@drawable/ic_insert_drive_file_black_48dp" app:icon_color="@color/toolbar" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:text="@string/text_file" />
    <org.autojs.autojs.ui.widget.ToolbarMenuItem android:id="@id/edit" android:layout_width="32.0dp" android:layout_height="match_parent" android:layout_marginStart="8.0dp" app:icon="@drawable/ic_edit_black_48dp" app:icon_color="@color/toolbar" app:layout_constraintStart_toEndOf="@id/file" app:layout_constraintTop_toTopOf="parent" app:text="@string/text_edit" />
    <org.autojs.autojs.ui.widget.ToolbarMenuItem android:id="@id/debug" android:layout_width="32.0dp" android:layout_height="match_parent" android:layout_marginStart="8.0dp" app:icon="@drawable/ic_bug_report_black_48dp" app:icon_color="@color/toolbar" app:layout_constraintStart_toEndOf="@id/edit" app:layout_constraintTop_toTopOf="parent" app:text="@string/text_debug_abbr" />
    <org.autojs.autojs.ui.widget.ToolbarMenuItem android:id="@id/terminal" android:visibility="visible" android:layout_width="32.0dp" android:layout_height="match_parent" android:layout_marginStart="8.0dp" app:icon="@drawable/ic_terminal" app:icon_color="@color/toolbar" app:layout_constraintStart_toEndOf="@id/debug" app:layout_constraintTop_toTopOf="parent" app:text="@string/text_terminal" />
    <org.autojs.autojs.ui.widget.ToolbarMenuItem android:id="@id/others" android:layout_width="32.0dp" android:layout_height="match_parent" android:layout_marginStart="8.0dp" app:icon="@drawable/ic_more_horiz_black_48dp" app:icon_color="@color/toolbar" app:layout_constraintStart_toEndOf="@id/terminal" app:layout_constraintTop_toTopOf="parent" app:text="@string/text_others" />
    <org.autojs.autojs.ui.widget.ToolbarMenuItem android:id="@id/log" android:layout_width="32.0dp" android:layout_height="match_parent" app:icon="@drawable/ic_ali_log" app:icon_color="@color/toolbar" app:layout_constraintEnd_toStartOf="@id/run" app:layout_constraintTop_toTopOf="parent" app:text="@string/text_log" />
    <org.autojs.autojs.ui.widget.ToolbarMenuItem android:id="@id/run" android:layout_width="32.0dp" android:layout_height="match_parent" app:icon="@drawable/ic_play_arrow_white_48dp" app:icon_color="@color/toolbar" app:layout_constraintEnd_toStartOf="@id/undo" app:layout_constraintTop_toTopOf="parent" app:text="@string/text_run" />
    <org.autojs.autojs.ui.widget.ToolbarMenuItem android:id="@id/undo" android:layout_width="32.0dp" android:layout_height="match_parent" app:icon="@drawable/ic_undo_white_48dp" app:icon_color="@color/toolbar" app:layout_constraintEnd_toStartOf="@id/redo" app:layout_constraintTop_toTopOf="parent" app:text="@string/text_undo" />
    <org.autojs.autojs.ui.widget.ToolbarMenuItem android:id="@id/redo" android:layout_width="32.0dp" android:layout_height="match_parent" app:icon="@drawable/ic_redo_white_48dp" app:icon_color="@color/toolbar" app:layout_constraintEnd_toStartOf="@id/save" app:layout_constraintTop_toTopOf="parent" app:text="@string/text_redo" />
    <org.autojs.autojs.ui.widget.ToolbarMenuItem android:enabled="false" android:id="@id/save" android:layout_width="32.0dp" android:layout_height="match_parent" app:icon="@drawable/ic_save_white_48dp" app:icon_color="@color/toolbar" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" app:text="@string/text_save" />
</androidx.constraintlayout.widget.ConstraintLayout>
