<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="16.0dp" android:paddingTop="8.0dp" android:paddingRight="16.0dp" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.AppCompatSeekBar android:id="@id/seekbar" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dp" android:layout_marginBottom="4.0dp" android:max="40" />
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_size_min_value" android:layout_marginStart="10.0dp" />
        <TextView android:textSize="16.0sp" android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/text_size_max_value" android:layout_marginEnd="8.0dp" />
    </LinearLayout>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:text="@string/text_preview" />
    <TextView android:gravity="center" android:id="@id/previewText" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:minHeight="60.0dp" android:text="@string/app_name" />
</LinearLayout>
