<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:paddingTop="16.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="24.0dp" android:paddingEnd="24.0dp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.textfield.TextInputLayout android:id="@id/inputLayout" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText android:id="@id/editText" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/text_script_dir" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:id="@id/hint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:layout_marginBottom="8.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/inputLayout" />
    <RadioGroup android:orientation="vertical" android:id="@id/radioGroup" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/hint">
        <RadioButton android:id="@id/none" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/text_no_op" />
        <RadioButton android:id="@id/copy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_copy_dir_to_new_dir" />
        <RadioButton android:id="@id/move" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_move_dir_to_new_dir" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
