<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:id="@id/appBar" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar android:id="@id/toolbar" android:layout_width="match_parent" android:layout_height="?actionBarSize" app:menu="@menu/menu_signing_config_manager" app:navigationIcon="@drawable/ic_round_arrow_back_24" app:navigationIconTint="@color/colorOnSurface" app:title="@string/text_manage_signature" />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.recyclerview.widget.RecyclerView android:id="@id/signingConfigsView" android:background="@color/colorSurface" android:paddingTop="8.0dp" android:layout_width="match_parent" android:layout_height="match_parent" app:layoutManager="com.stardust.autojs.workground.WrapContentLinearLayoutManager" app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton android:layout_gravity="end|bottom" android:id="@id/fab" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dp" android:text="@string/text_create_signature" app:icon="@drawable/ic_round_add_24" app:layout_behavior="org.autojs.autojs.ui.widget.ScrollAwareExtendedFabBehavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
